manifests/redis-counter.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-app
  labels:
    app: counter-app
spec:
  selector:
    matchLabels:
      app: counter-app
  replicas: 1
  template:
    metadata:
      labels:
        app: counter-app
    spec:
      containers:
        - name: counter-app
          image: anandmaragur/redis-counter-app:v1
          imagePullPolicy: Always
          ports:
          - protocol: TCP
            containerPort: 8080
        
---
apiVersion: v1
kind: Service
metadata:
  name: counter-app-service
spec:
  type: NodePort
  selector:
    app: counter-app
  ports:
  - name: counter-app-service-port
    protocol: TCP
    port: 8080
    targetPort: 8080
