manifests/redis-db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-db
  labels:
    app: redis-db
spec:
  selector:
    matchLabels:
      app: redis-db
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-db
    spec:
      containers:
        - name: redis-db
          image: redis
          ports:
          - protocol: TCP
            containerPort: 6379
    
    
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-db-svc
  name: redis-db-svc
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis-db
