manifests/redis-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: counter-app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-app-service
                port:
                  number: 8080
